tests/sumo/errors/high_double/errors.sumo
Error: While processing option 'scale':
 '1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890' is not a valid float.
Error: Could not parse commandline options.
Quitting (on error).
